--- a/packages/reactivity/examples/index.html
+++ b/packages/reactivity/examples/index.html
@@ -13,15 +13,16 @@
   const { reactive, effect, computed, ref, toRaw } = VueReactivity
   const cyber = { name:'David&Lucy', friends: 'Maine', job: { main: 'edgerunner' } }
   const David = reactive(cyber)
-  const Lucy = reactive(cyber)
-  const count = ref(0)
-  let origin
+  // const Lucy = reactive(cyber)
+  // const count = ref(0)
+  // let origin
   // 测试重复添加响应、获取代理的原始对象
-  console.log(reactive(David) === David, David === Lucy, David, origin = toRaw(David))
+  // console.log(reactive(David) === David, David === Lucy, David, origin = toRaw(David))
 
-  // // 测试computed
+  // 测试computed
   // const mates = computed({
   //   get() {
+  //     console.log('计算')
   //     return Lucy.friends + ' Dorio'
   //   },
   //   set(value) {
@@ -29,26 +30,28 @@
   //   }
   // })
 
-  // // 测试effect
-  // const runner = effect(() => {
-  //   app.innerText = `name: ${Lucy.name}
-  //   friends: ${Lucy.friends}
-  //   job: ${Lucy.job.main}
-  //   mates: ${mates.value}
-  //   count: ${count.value}`
-  // })
+  // 测试effect
+  const runner = effect(() => {
+    David.name = Math.random()
+    console.log('effect')
+    app.innerText = `name: ${David.name}
+    friends: ${David.friends}
+    job: ${David.job.main}`
+  })
   // // 测试强制执行effect、注销effect
   // runner()
   // runner.effect.stop()
 
-  // // 测试 effect 响应
-  // setTimeout(() => {
-  //   David.name = 'David'
-  //   Lucy.job.main = 'netrunner'
-  // }, 1000);
+  // 测试 effect 响应
+  setTimeout(() => {
+    David.name = 'David'
+    // Lucy.job.main = 'netrunner'
+  }, 1000);
+
   // setTimeout(() => {
   //   Lucy.friends += ' Rebecca' // 测试 computed 响应
   // }, 2000);
+
   // setTimeout(() => {
   //   count.value++ // 测试 ref 响应
   // }, 3000);
