--- a/packages/runtime-dom/example/index.html
+++ b/packages/runtime-dom/example/index.html
@@ -12,7 +12,7 @@
     <div id="app"></div>
     <script src="../dist/runtime-dom.global.js"></script>
     <script>
-        let { createApp, h, ref } = VueRuntimeDOM; // VueRuntimeDOM -> VueRuntimeCore -> reactivity
+        let { createApp, h, ref, render } = VueRuntimeDOM; // VueRuntimeDOM -> VueRuntimeCore -> reactivity
         function useCounter() {
             const count = ref(0);
             const add = () => {
@@ -50,8 +50,9 @@
             }
         }
 
-        let app = createApp(App,{title:'zf',a:1});
-        app.mount('#app');
+        // let app = createApp(App,{title:'zf',a:1});
+        // app.mount('#app');
+        // render(h('div',{style:{color:'red'}},['hello', 'world']), document.querySelector('#app'))
     </script>
 </body>
 
